--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "~1.0.2",
     "xml2js": "~0.4.2",
     "async": "~0.7.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "cheerio": "^0.15.0"
   }
 }
