--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "xml2js": "~0.4.2",
     "async": "~0.7.0",
     "lodash": "~2.4.1",
-    "cheerio": "^0.15.0"
+    "cheerio": "^0.15.0",
+    "swig": "^1.3.2",
+    "levenshtein": "^1.0.4"
   }
 }
